# bulletin

./: .gitignore  Dockerfile  Dockerfile_Tasks  Procfile  README.md  docker-compose.dev.yml  heroku.yml  pyproject.toml  requirements.txt
.github/: docker-image.archive.yml
.github/workflows/: docker-image.yml  native-runner.yml
apps/authentication/: config.py  forms.py
apps/home/: config.py  urls.py
apps/internet_speedtester/: admin.py  config.py  models.py  tasks.py  tests.py  urls.py  views.py
apps/internet_speedtester/migrations/: 0001_initial.py
apps/internet_speedtester/utils/: __init__.py  abstract_speeedtest.py  function_methods.py
apps/social/: admin.py  models.py  task_runner.py  tasks.py  tests.py  urls.py  views.py
apps/social/abstract/: abstract_slackclient.py  abstract_tweepy.py
apps/social/migrations/: 0001_initial.py  0002_tweetmodel_alter_woeidmodel_options.py  0002_tweetmodel_tweetsystemmodel_alter_woeidmodel_options.py
apps/social/models/: __init__.py  helpers.py  social_models.py  twitter.py
apps/social/tasks/: __init__.py  random_tweet.py  (+2 more)
apps/system/: consumers.py  routing.py  urls.py  utils.py  views.py
core/: asgi.py  celery_app.py  messages.py  settings.py  tasks.py  urls.py  wsgi.py
core/fixtures/: bulletin-admin-theme.json  django_celery_fixtures.json  woeidmodel_fixtures.json
core/utils/: resources.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml
docker/timeloop/: docker-compose.timeloop.dev.yml  docker-compose.timeloop.staging.yml
scripts/: core_tasks.sh  entrypoint.sh  local_migrate.sh  poetry_export.sh
(+45 files in other folders)
