[tool.poetry]
name = "bulletin"
version = "0.1.0"
description = "A bulletin project built by Django to display a dashboard that integrates couple of applications that include weather, internet speed and system info."
authors = ["ibrahimroshdy <ibrahimabdelrahman@aucegypt.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
dj-database-url = "^1.0.0"
django-celery-beat = "^2.3.0"
whitenoise = "^6.2.0"
gunicorn = "^20.1.0"
asgiref = "^3.5.2"
psutil = "^5.9.1"
uptime = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
